# docs/swagger.json
@@ -1455,6 +1455,7 @@
                     "example": 1
                 },
                 "status": {
+                    "description": "Добавляем для модератора",
                     "type": "string",
                     "example": "черновик"
                 },
@@ -1467,17 +1468,13 @@
         "handler.TreeShortResponse": {
             "type": "object",
             "properties": {
-                "amount_of_orders": {
+                "amount_of_anomalies": {
                     "type": "integer",
                     "example": 3
                 },
                 "creator": {
                     "type": "string",
                     "example": "research_user"
-                },
-                "date_create": {
-                    "type": "string",
-                    "example": "2023-11-15 10:30:00"
                 },
                 "id": {
                     "type": "integer",
@@ -1488,6 +1485,7 @@
                     "example": "moderator_user"
                 },
                 "status": {
+                    "description": "Добавляем для модератора",
                     "type": "string",
                     "example": "черновик"
                 }
